--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -4,14 +4,11 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 25px;
-  background-color: rgb(104, 185, 145);
-  // position: fixed;
-  // margin-bottom: 70px;
+  background-color: #16AB39;
 
   .logo-container {
     height: 100%;
     width: 70px;
-    // padding: 25px;
   }
 
   .logo {
