food page (starch, protein, vegetable, search) and custom Segment UI

--- a/src/pages/food/food.scss
+++ b/src/pages/food/food.scss
@@ -4,8 +4,9 @@
 
 .listItem {
   display: flex;
-  // flex-wrap: wrap;
   justify-content: start;
+  box-shadow: none !important;
+  border: none !important;
 }
 
 .iconFood {
