--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -7,7 +7,7 @@
   margin: 10px auto;
   min-width: 250px;
   max-width: 250px;
-  height: 360px;
+  height: 370px;
   background-color: #fff;
   box-shadow: 5px 5px 25px rgb(184, 183, 183);
   
@@ -20,5 +20,11 @@
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+  }
+
+  .customSegment {
+    box-shadow: none !important;
+    border: none !important;
+    margin-top: -10px !important;
   }
 }
