--- a/src/pages/food/food.scss
+++ b/src/pages/food/food.scss
@@ -29,3 +29,13 @@
   border: none !important;
   margin-top: -10px !important;
 }
+
+.listHandle {
+  bottom: 0;
+  right: 0;
+  padding: 10px;
+  position: fixed;
+  background-color: rgb(241, 241, 154);
+  z-index: 1000;
+  text-align: center;
+}
